--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^12.0.0",
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
+    "@devui-design/icons": "^1.3.0",
     "@hpcc-js/wasm": "0.3.13",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngx-translate/core": "^12.1.2",
@@ -39,7 +40,7 @@
     "eslint": "^7.32.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "ng-devui": "^12.0.0",
+    "ng-devui": "^12.1.0",
     "ngx-ace-wrapper": "^11.0.0",
     "ngx-bootstrap": "^7.0.0",
     "pegjs": "^0.9.0",
