update package version

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "console-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "npm run prepare && ng start",
-    "prepare": "mkdir dist -p && pegjs src/app/components/graph/dotParser.pegjs src/app/components/graph/dotParser.js",
+    "start": "npm run prepare && ng serve",
+    "prepare": "mkdir dist -p && pegjs src/app/components/graph/dotParser.pegjs dist/dotParser.js",
     "build": "npm run prepare && ng build",
     "serve": "ng serve"
   },
@@ -25,11 +25,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^5.0.0",
-    "@popperjs/core": "^2.10.1",
     "@types/jquery": "^3.5.6",
     "angular-split": "5.0.0",
-    "angular-ui-bootstrap": "^2.5.6",
-    "bootstrap": "^5.1.0",
     "brace": "^0.11.1",
     "d3-graphviz": "3.1.0",
     "d3-scale-chromatic": "^1.5.0",
@@ -44,15 +41,14 @@
     "ngx-ace-wrapper": "^11.0.0",
     "ngx-bootstrap": "^7.0.0",
     "pegjs": "^0.9.0",
-    "popper.js": "^1.16.1",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "~9.0.0",
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular-eslint/eslint-plugin": "^0.0.1-alpha.27",
+    "@angular-devkit/build-angular": "12.2.12",
+    "@angular-eslint/eslint-plugin": "12.1.0",
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "^12.0.0",
     "@angular/language-service": "^12.0.0",
@@ -60,8 +56,8 @@
     "@types/angular": "^1.8.2",
     "@types/lodash": "^4.14.158",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-spawn": "^7.0.3",
     "prettier": "^2.0.2",
