--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "~9.0.0",
+    "@angular-builders/custom-webpack": "9.0.0",
     "@angular-devkit/build-angular": "12.2.12",
     "@angular-eslint/eslint-plugin": "12.1.0",
     "@angular/cli": "^12.0.0",
