--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "~9.0.0",
+    "@angular-builders/custom-webpack": "~12.0.0",
     "@angular-devkit/build-angular": "12.2.12",
     "@angular-eslint/eslint-plugin": "12.1.0",
     "@angular/cli": "^12.0.0",
@@ -63,6 +63,8 @@
     "prettier": "^2.0.2",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
+    "svg-inline-loader": "^0.8.2",
+    "svg-url-loader": "^7.1.1",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.3"
   }
