--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,6 @@
     "projects": {
         "console": {
             "projectType": "application",
-            
             "root": "",
             "sourceRoot": "src",
             "prefix": "app",
@@ -68,6 +67,26 @@
                                     "maximumError": "10kb"
                                 }
                             ]
+                        },
+                        "development": {
+                            "optimization": false,
+                            "sourceMap": true,
+                            "namedChunks": true,
+                            "extractLicenses": true,
+                            "vendorChunk": true,
+                            "buildOptimizer": false,
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "2mb",
+                                    "maximumError": "6mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb",
+                                    "maximumError": "10kb"
+                                }
+                            ]
                         }
                     }
                 },
@@ -80,6 +99,9 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "console:build:production"
+                        },
+                        "development": {
+                            "browserTarget": "console:build:development"
                         }
                     }
                 },
