--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "d3-transition": "^1.3.2",
     "d3-zoom": "^1.8.3",
     "dotparser": "^1.0.0",
+    "driver.js": "^0.9.8",
     "eslint": "^7.32.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
