--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "npm run prepare && ng serve",
     "prepare": "mkdir dist -p && pegjs src/app/components/graph/dotParser.pegjs dist/dotParser.js",
     "build": "npm run prepare && ng build",
-    "serve": "ng serve"
+    "serve": "ng serve --configuration development"
   },
   "private": true,
   "dependencies": {
