fix bug of graph setting and graph select

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-bootstrap": "^7.0.0",
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
+    "sass": "^1.49.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.11.4"
   },
