--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.0",
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/localize": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
+    "@angular/animations": "~12.2.13",
+    "@angular/common": "~12.2.13",
+    "@angular/compiler": "~12.2.13",
+    "@angular/core": "~12.2.13",
+    "@angular/forms": "~12.2.13",
+    "@angular/localize": "~12.2.13",
+    "@angular/platform-browser": "~12.2.13",
+    "@angular/platform-browser-dynamic": "~12.2.13",
+    "@angular/router": "~12.2.13",
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.4",
     "@devui-design/icons": "^1.3.0",
     "@hpcc-js/wasm": "0.3.13",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@types/jquery": "^3.5.6",
-    "angular-split": "5.0.0",
+    "@types/jquery": "~3.5.14",
+    "angular-split": "~5.0.0",
     "brace": "^0.11.1",
     "d3-graphviz": "3.1.0",
     "d3-scale-chromatic": "^1.5.0",
@@ -38,19 +38,19 @@
     "eslint": "^7.32.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "ng-devui": "^12.3.0",
-    "ngx-ace-wrapper": "^11.0.0",
-    "ngx-bootstrap": "^7.0.0",
+    "ng-devui": "~12.3.0",
+    "ngx-ace-wrapper": "~11.0.0",
+    "ngx-bootstrap": "~7.1.2",
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
     "sass": "^1.49.0",
-    "tslib": "^1.10.0",
+    "tslib": "~2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "~12.0.0",
-    "@angular-devkit/build-angular": "12.2.12",
-    "@angular-eslint/eslint-plugin": "12.1.0",
+    "@angular-devkit/build-angular": "^12.2.12",
+    "@angular-eslint/eslint-plugin": "^12.1.0",
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "^12.0.0",
     "@angular/language-service": "^12.0.0",
@@ -60,14 +60,14 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "copy-webpack-plugin": "^4.6.0",
+    "copy-webpack-plugin": "~10.2.4",
     "cross-spawn": "^7.0.3",
-    "prettier": "^2.0.2",
-    "stylelint": "^13.2.1",
-    "stylelint-config-standard": "^20.0.0",
+    "prettier": "~2.6.2",
+    "stylelint": "~14.7.1",
+    "stylelint-config-standard": "^25.0.0",
     "svg-inline-loader": "^0.8.2",
-    "svg-url-loader": "^7.1.1",
-    "ts-node": "~8.3.0",
+    "svg-url-loader": "~7.1.1",
+    "ts-node": "~10.7.0",
     "typescript": "~4.2.3"
   }
 }
