UI: add debug modal and fix python flowunit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/jquery": "~3.5.14",
+    "ace-builds": "^1.4.14",
     "angular-split": "~5.0.0",
     "brace": "^0.11.1",
     "d3-graphviz": "3.1.0",
@@ -41,6 +42,7 @@
     "ng-devui": "~12.3.0",
     "ngx-ace-wrapper": "~11.0.0",
     "ngx-bootstrap": "~7.1.2",
+    "ngx-json-viewer": "^3.0.2",
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
     "sass": "^1.49.0",
