--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-ace-wrapper": "~11.0.0",
     "ngx-bootstrap": "~7.1.2",
     "ngx-json-viewer": "^3.0.2",
+    "ngx-showdown": "^6.0.0",
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
     "sass": "^1.49.0",
@@ -60,6 +61,7 @@
     "@types/angular": "^1.8.2",
     "@types/lodash": "^4.14.158",
     "@types/node": "^12.11.1",
+    "@types/showdown": "^1.9.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "copy-webpack-plugin": "~10.2.4",
