--- a/angular.json
+++ b/angular.json
@@ -111,6 +111,30 @@
                         }
                     }
                 },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "src/test.ts",
+                        "polyfills": "src/polyfills.ts",
+                        "tsConfig": "tsconfig.spec.json",
+                        "karmaConfig": "karma.conf.js",
+                        "inlineStyleLanguage": "less",
+                        "styles": [
+                            "src/styles.less",
+                            "node_modules/ng-devui/devui.min.css",
+                            "node_modules/driver.js/dist/driver.min.css",
+                            "node_modules/@devui-design/icons/icomoon/devui-icon.css"
+                        ],
+                        "scripts": [
+                            "node_modules/driver.js/dist/driver.min.js"
+                        ],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets",
+                            "src/manifest.json"
+                        ]
+                    }
+                },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
