UI: add routing test && fix rootpath error && reponse value

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -13,7 +13,8 @@
   ],
   "include": [
     "src/**/*.spec.ts",
-    "src/app/components/**/*.spec.ts",
+    "src/app/**/**/*.spec.ts",
+    "src/app/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
 }
