UI: add coverage

--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
     "@angular/language-service": "^12.0.0",
     "@babel/compat-data": "^7.8.0",
     "@types/angular": "^1.8.2",
+    "@types/jasmine": "~4.0.0",
     "@types/lodash": "^4.14.158",
     "@types/node": "^12.11.1",
     "@types/showdown": "^1.9.4",
-    "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "copy-webpack-plugin": "~10.2.4",
@@ -73,6 +73,7 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "~2.6.2",
+    "puppeteer": "^15.3.0",
     "stylelint": "~14.7.1",
     "stylelint-config-standard": "^25.0.0",
     "svg-inline-loader": "^0.8.2",
