--- a/angular.json
+++ b/angular.json
@@ -132,7 +132,8 @@
                             "src/favicon.ico",
                             "src/assets",
                             "src/manifest.json"
-                        ]
+                        ],
+                        "codeCoverage": true
                     }
                 },
                 "extract-i18n": {
