UI: auto install npm

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "console-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "npm run prepare && ng serve",
+    "start": "npx -y ai-install --ignore-scripts puppeteer && npm run prepare && ng serve",
     "prepare": "mkdir dist -p && pegjs src/app/components/graph/dotParser.pegjs dist/dotParser.js",
-    "build": "npm run prepare && ng build --configuration production",
-    "serve": "ng serve --configuration development",
-    "test": "ng test"
+    "build": "npx -y ai-install --ignore-scripts puppeteer && npm run prepare && ng build --configuration production",
+    "serve": "npx -y ai-install --ignore-scripts puppeteer && ng serve --configuration development",
+    "test": "npx -y ai-install --ignore-scripts puppeteer && ng test"
   },
   "private": true,
   "dependencies": {
