--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ng-devui": "~12.3.0",
     "ngx-ace-wrapper": "~11.0.0",
     "ngx-bootstrap": "~7.1.2",
-    "ngx-json-viewer": "^3.0.2",
+    "ngx-json-viewer": "3.0.2",
     "ngx-showdown": "^6.0.0",
     "pegjs": "^0.9.0",
     "rxjs": "^6.5.3",
